--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-telegram",
+  "name": "nestjs-telegram-bot-api",
   "version": "1.1.2",
   "description": "A NestJS Module for Telegram Bots",
   "author": {
